--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -59,9 +59,7 @@
 }
 
 body {
-  min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
+  @apply bg-raisin_black text-magnolia min-h-screen;
   transition:
     color 0.5s,
     background-color 0.5s;
